--- a/twitter-commons/styles/global.css
+++ b/twitter-commons/styles/global.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&display=swap');
+
 html,
 body {
   padding: 0;
@@ -14,3 +16,9 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.ibm{
+    font-family: 'IBM Plex Mono';
+}
+
+
